@@ -1,0 +1,7 @@
+use ExtUtils::MakeMaker;
+
+WriteMakefile(
+    NAME	=> "Apache::IO",
+    VERSION_FROM => "IO.pm",
+);
+
