@@ -1,0 +1,5 @@
+
+use Apache::test;
+
+print fetch "http://$net::httpserver$net::perldir/io.pl";
+
